# langcodec

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  langcodec.example.toml  langcodec.toml.example
.github/workflows/: clippy-check.yml  release.yml  rust-clippy.yml  rust.yml
docs/plans/: 2026-02-27-normalize-subcommand-design.md  2026-02-27-normalize-subcommand-implementation-plan.md  2026-03-03-view-status-filter-design.md  2026-03-03-view-status-filter-implementation-plan.md
langcodec/: Cargo.toml  README.md
langcodec-cli/: Cargo.toml  README.md
langcodec-cli/langcodec-cli/tests/fixtures/: temp_sample.yaml
langcodec-cli/src/: ai.rs  annotate.rs  config.rs  convert.rs  debug.rs  diff.rs  edit.rs  formats.rs  lib.rs  main.rs  merge.rs  normalize.rs  path_glob.rs  stats.rs  sync.rs  tolgee.rs  translate.rs  ui.rs  validation.rs  view.rs
langcodec-cli/src/transformers/: json_array_language_map.rs  json_language_map.rs  langcodec_resource_array.rs  mod.rs  yaml_language_map.rs
langcodec-cli/src/tui/: app.rs  mod.rs  render.rs  reporter.rs  terminal.rs
langcodec-cli/tests/: android_plurals_cli_tests.rs  annotate_cli_tests.rs  cli_integration_tests.rs  cli_tests.rs  config_glob_cli_tests.rs  diff_cli_tests.rs  edit_cli_tests.rs  format_edge_cases.rs  integration_tests.rs  langcodec_comma_syntax_tests.rs  langcodec_filter_tests.rs  langcodec_format_tests.rs  langcodec_include_tests.rs  langcodec_output_simple_tests.rs  merge_tests.rs  normalize_cli_tests.rs  plural_validation_cli_tests.rs  stats_cli_tests.rs  sync_cli_tests.rs  tolgee_cli_tests.rs  unicode_roundtrip_tests.rs  validation_tests.rs  view_status_cli_tests.rs  xliff_cli_tests.rs
langcodec-cli/tests/fixtures/: cli_sample.langcodec  cli_sample1.strings  cli_sample_json_array.json
langcodec/src/: builder.rs  codec.rs  converter.rs  error.rs  formats.rs  lib.rs  normalize.rs  operations.rs  placeholder.rs  plural_rules.rs  provenance.rs  read_options.rs  traits.rs  types.rs
langcodec/src/formats/: android_strings.rs  csv.rs  mod.rs  strings.rs  tsv.rs  xcstrings.rs  xliff.rs
langcodec/tests/: conversion_matrix_tests.rs  corpus_regression_tests.rs  normalize_engine_tests.rs  roundtrip_property_tests.rs
src/: codec.rs  error.rs  lib.rs  traits.rs  types.rs
src/formats/: android_strings.rs  csv.rs  mod.rs  strings.rs  xcstrings.rs
tests/: README.md
tests/data/cli/: cli_sample.csv  cli_sample2.strings  cli_sample_android.xml  cli_sample_conflict.strings
tests/data/lib/: merged_csv.csv  sample.csv  sample_android.xml  sample_conflict.csv  sample_conflict.strings  sample_en.strings  sample_fr.strings  sample_from_csv.strings  sample_to_csv.csv
tests/data/lib/corpus/: corpus.csv  corpus.tsv
tests/data/lib/corpus/en.lproj/: Localizable.strings
tests/data/lib/corpus/values-en/: strings.xml
