[package]
name = "langcodec"
version = "0.1.0"
edition = "2024"
description = "Universal localization file toolkit for Rust. Supports Apple, Android, and CSV formats."
license = "MIT"
repository = "https://github.com/WendellXY/langcodec"
homepage = "https://github.com/WendellXY/langcodec"
readme = "README.md"
keywords = ["localization", "i18n", "l10n", "strings", "android", "apple"]
categories = ["internationalization", "localization", "encoding"]

[dependencies]
csv = "1.3"
indoc = "2.0.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
quick-xml = "0.37.5"
regex = "1.11.1"
unic-langid = "0.9.6"
