[package]
name = "langcodec-cli"
version = "0.4.1"
edition = "2024"
description = "A universal CLI tool for converting and inspecting localization files (Apple, Android, CSV, etc.)"
license = "MIT"
repository = "https://github.com/WendellXY/langcodec"
homepage = "https://github.com/WendellXY/langcodec"
readme = "../README.md"
keywords = ["localization", "i18n", "cli", "android", "apple"]
categories = ["command-line-utilities", "internationalization", "localization"]
documentation = "https://docs.rs/langcodec-cli"

[dependencies]
langcodec = "0.4.1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
unicode-width = "0.2.1"
crossterm = "0.29.0"
atty = "0.2.14"
serde_json = "1.0"
serde_yaml = "0.9"
unic-langid = "0.9.6"
glob = "0.3"
rayon = "1.10"
ignore = "0.4"
globset = "0.4"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "langcodec"
path = "src/main.rs"
